--- a/challenge-2/package.json
+++ b/challenge-2/package.json
@@ -36,10 +36,10 @@
     "@typescript-eslint/parser": "8.37.0",
     "@vitejs/plugin-react": "4.6.0",
     "eslint": "9.31.0",
+    "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import-x": "4.16.1",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-prettier": "5.5.1",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
